Azure_Templates/vnet_template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vnetLocation": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for the virtual network and associated resources."
      }
    }
  },
  "functions": [],
  "variables": {
    "networkSecurityGroupName": "myNetworkSecurityGroup"
  },
  "resources": [
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-03-01",
      "location": "[parameters('vnetLocation')]", // Using parameter for location
      "properties": {
        "securityRules": [
          {
            "name": "AllowRDP",
            "properties": {
              "description": "Allow RDP traffic from any source",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet", // Or specify a CIDR like '0.0.0.0/0' or a specific IP address
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100, // Lower numbers have higher priority
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowHTTP",
            "properties": {
              "description": "Allow HTTP traffic from any source",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet", // Or specify a CIDR like '0.0.0.0/0' or a specific IP address
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110, // Must be unique
              "direction": "Inbound"
            }
          }
          // You can add more rules here if needed
        ]
      },
      "tags": {
        "displayName": "myNetworkSecurityGroup"
      }
    },
    {
      "name": "virtualNetwork1",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-03-01",
      "location": "[parameters('vnetLocation')]", // Using parameter for location
      "tags": {
        "displayName": "virtualNetwork1"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": ["10.0.0.0/16"]
        },
        "subnets": [
          {
            "name": "Subnet-1",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          },
          {
            "name": "Subnet-2",
            "properties": {
              "addressPrefix": "10.0.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
              }
            }
          }
        ]
      }
    }
  ],
  "outputs": {}
}
